# progresar

./: .gitignore  Dockerfile  README.md  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml  terraform.yml
app/: main.py
app/controllers/: user_controller.py
app/models/: prospect.py
app/services/: network_service.py  prospect_service.py
app/utils/: api_client.py  helpers.py
terraform/: main.tf  terraform.tfstate
tests/: test_helpers.py  test_main.py  test_network_service.py  test_user.py
