[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "progresar"
version = "0.1.0"
description = "A tool to expand and grow one's network post an online meeting"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["network", "meeting", "invite"]
dependencies = [
    # Add your dependencies here
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/yourusername/progresar"

[project.scripts]
progresar = "app.main:main"

[tool.setuptools]
packages = ["app"]
